--- a/Playbooks/install_apache.yml
+++ b/Playbooks/install_apache.yml
@@ -5,10 +5,10 @@
   tasks:
 
   - name: install apache2 and php packages
-    apt:
+    package:
       name: 
-        - apache2
-        - libapache2-mod-php
+        - "{{ apache_package }}"
+        - "{{ php_package }}"
       state: latest
       update_cache: yes
     when: ansible_distribution == "Ubuntu"
