--- a/Playbooks/site.yml
+++ b/Playbooks/site.yml
@@ -2,7 +2,7 @@
 
 - hosts: all
   become: true
-  tasks:
+  pre_tasks:
 
   - name: install updates (ubuntu)
     apt:
@@ -22,3 +22,12 @@
       state: latest
     when: ansible_distribution == "Ubuntu"
 
+- hosts: db_servers
+  become: true
+  tasks:
+
+  - name: install mariadb package (Ubuntu)
+    apt:
+      name: mariadb-server
+      state: latest
+    when: ansible_distribution == "Ubuntu"
