--- a/Playbooks/site.yml
+++ b/Playbooks/site.yml
@@ -53,3 +53,20 @@
     package:
       name: samba
       state: latest
+
+- hosts: workstations
+  beomce: true
+  tasks:
+
+    - name: install unzip
+      package:
+        name: unzip
+
+    - name: install terraform
+      unarchive:
+        src: https://releases.hashicorp.com/terraform/1.4.2/terraform_1.4.2_linux_amd64.zip
+        dest: /usr/local/bin
+        remote_src: yes
+        mode: 0755
+        owner: root
+        group: root
