Add sudoer file #2

--- a/Playbooks/site.yml
+++ b/Playbooks/site.yml
@@ -97,7 +97,7 @@
 
     - name: add sudoers file for jeff
       copy:
-        src: sudoer_jeff
+        src: ../files/sudoer_jeff
         dest: /etc/sudoers.d/jeff
         owner: root
         group: root
